exports[`Collapse should render a default collapse 1`] = `
<div
  class="terra-Collapse">
  <button
    aria-disabled="false"
    aria-expanded="false"
    class="terra-Button terra-Button--default"
    type="button">
    <div
      class="terra-Arrange">
      <div
        class="terra-Arrange-fitStart terra-Arrange-fitStart--center">
        <span
          class="terra-Collapse-icon">
          <svg
            aria-hidden="true"
            class="terra-Icon is-bidi"
            data-name="Layer 1"
            focusable="false"
            height="1em"
            viewbox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg">
            <path
              d="M37.7 24L14.2 48l-3.9-3.8L30 24 10.3 3.8 14.2 0z" />
          </svg>
        </span>
      </div>
      <div
        class="terra-Arrange-fill terra-Arrange-fill--center">
        <span
          class="terra-Collapse-buttonText">
          Show
        </span>
      </div>
      <div
        class="terra-Arrange-fitEnd terra-Arrange-fitEnd--center" />
    </div>
  </button>
  <div
    aria-hidden="true"
    class="terra-Toggler" />
</div>
`;

exports[`Collapse should render an animated collapse 1`] = `
<div
  class="terra-Collapse">
  <button
    aria-disabled="false"
    aria-expanded="false"
    class="terra-Button terra-Button--default"
    type="button">
    <div
      class="terra-Arrange">
      <div
        class="terra-Arrange-fitStart terra-Arrange-fitStart--center">
        <span
          class="terra-Collapse-icon">
          <svg
            aria-hidden="true"
            class="terra-Icon is-bidi"
            data-name="Layer 1"
            focusable="false"
            height="1em"
            viewbox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg">
            <path
              d="M37.7 24L14.2 48l-3.9-3.8L30 24 10.3 3.8 14.2 0z" />
          </svg>
        </span>
      </div>
      <div
        class="terra-Arrange-fill terra-Arrange-fill--center">
        <span
          class="terra-Collapse-buttonText">
          Show
        </span>
      </div>
      <div
        class="terra-Arrange-fitEnd terra-Arrange-fitEnd--center" />
    </div>
  </button>
  <div
    aria-hidden="true"
    class="terra-Toggler">
    <div>
      <div
        aria-hidden="false"
        class="rah-static"
        style="height:0px;overflow:hidden;">
        <div>
          Test
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse should render an icon only collapse 1`] = `
<div
  class="terra-Collapse">
  <button
    aria-disabled="false"
    aria-expanded="false"
    aria-label="Show"
    class="terra-Button terra-Button--default"
    type="button">
    <span
      class="terra-Collapse-icon">
      <svg
        aria-hidden="true"
        class="terra-Icon is-bidi"
        data-name="Layer 1"
        focusable="false"
        height="1em"
        viewbox="0 0 48 48"
        width="1em"
        xmlns="http://www.w3.org/2000/svg">
        <path
          d="M37.7 24L14.2 48l-3.9-3.8L30 24 10.3 3.8 14.2 0z" />
      </svg>
    </span>
  </button>
  <div
    aria-hidden="true"
    class="terra-Toggler" />
</div>
`;

exports[`Collapse should render an initially open collapse 1`] = `
<div
  class="terra-Collapse is-open">
  <button
    aria-disabled="false"
    aria-expanded="true"
    class="terra-Button terra-Button--default"
    type="button">
    <div
      class="terra-Arrange">
      <div
        class="terra-Arrange-fitStart terra-Arrange-fitStart--center">
        <span
          class="terra-Collapse-icon">
          <svg
            aria-hidden="true"
            class="terra-Icon is-bidi"
            data-name="Layer 1"
            focusable="false"
            height="1em"
            viewbox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg">
            <path
              d="M37.7 24L14.2 48l-3.9-3.8L30 24 10.3 3.8 14.2 0z" />
          </svg>
        </span>
      </div>
      <div
        class="terra-Arrange-fill terra-Arrange-fill--center">
        <span
          class="terra-Collapse-buttonText">
          Show
        </span>
      </div>
      <div
        class="terra-Arrange-fitEnd terra-Arrange-fitEnd--center" />
    </div>
  </button>
  <div
    aria-hidden="false"
    class="terra-Toggler">
    Test
  </div>
</div>
`;

exports[`Collapse should render an open collapse when clicked 1`] = `
<Collapse
  closedButtonText="Show"
  icon={
    <IconChevronRight
      className=""
      data-name="Layer 1"
      isBidi={true}
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg" />
  }
  isAnimated={false}
  isIconOnly={false}
  isInitiallyOpen={false}>
  <div
    className="terra-Collapse is-open">
    <Button
      aria-expanded={true}
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isReversed={false}
      onClick={[Function]}
      type="button"
      variant="default">
      <button
        aria-disabled={false}
        aria-expanded={true}
        className="terra-Button terra-Button--default"
        disabled={false}
        onClick={[Function]}
        type="button">
        <Arrange
          align="center"
          fill={
            <span
              className="terra-Collapse-buttonText">
              Show
            </span>
          }
          fitStart={
            <span
              className="terra-Collapse-icon">
              <IconChevronRight
                className=""
                data-name="Layer 1"
                isBidi={true}
                viewBox="0 0 48 48"
                xmlns="http://www.w3.org/2000/svg" />
            </span>
          }>
          <div
            className="terra-Arrange">
            <div
              className="terra-Arrange-fitStart terra-Arrange-fitStart--center">
              <span
                className="terra-Collapse-icon">
                <IconChevronRight
                  className=""
                  data-name="Layer 1"
                  isBidi={true}
                  viewBox="0 0 48 48"
                  xmlns="http://www.w3.org/2000/svg">
                  <IconBase
                    ariaLabel={null}
                    className=""
                    data-name="Layer 1"
                    focusable={false}
                    height="1em"
                    isBidi={true}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg">
                    <svg
                      aria-hidden="true"
                      className="terra-Icon is-bidi"
                      data-name="Layer 1"
                      focusable={false}
                      height="1em"
                      viewBox="0 0 48 48"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg">
                      <path
                        d="M37.7 24L14.2 48l-3.9-3.8L30 24 10.3 3.8 14.2 0z" />
                    </svg>
                  </IconBase>
                </IconChevronRight>
              </span>
            </div>
            <div
              className="terra-Arrange-fill terra-Arrange-fill--center">
              <span
                className="terra-Collapse-buttonText">
                Show
              </span>
            </div>
            <div
              className="terra-Arrange-fitEnd terra-Arrange-fitEnd--center" />
          </div>
        </Arrange>
      </button>
    </Button>
    <Toggler
      isAnimated={false}
      isOpen={true}>
      <div
        aria-hidden={false}
        className="terra-Toggler">
        Test
      </div>
    </Toggler>
  </div>
</Collapse>
`;

exports[`Collapse should set icon prop correctly 1`] = `
<div
  className="terra-Collapse">
  <Button
    aria-expanded={false}
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isReversed={false}
    onClick={[Function]}
    type="button"
    variant="default">
    <Arrange
      align="center"
      fill={
        <span
          className="terra-Collapse-buttonText">
          Show
        </span>
      }
      fitStart={
        <span
          className="terra-Collapse-icon">
          <IconChevronRight
            className=""
            data-name="Layer 1"
            isBidi={true}
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg" />
        </span>
      } />
  </Button>
  <Toggler
    isAnimated={false}
    isOpen={false}>
    Test
  </Toggler>
</div>
`;

exports[`Collapse should set icon prop correctly with custom icon 1`] = `
<div
  className="terra-Collapse">
  <Button
    aria-expanded={false}
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isReversed={false}
    onClick={[Function]}
    type="button"
    variant="default">
    <Arrange
      align="center"
      fill={
        <span
          className="terra-Collapse-buttonText">
          Show
        </span>
      }
      fitStart={
        <span
          className="terra-Collapse-icon">
          <IconCaretRight
            className=""
            isBidi={true}
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg" />
        </span>
      } />
  </Button>
  <Toggler
    isAnimated={false}
    isOpen={false}>
    Test
  </Toggler>
</div>
`;
